--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <article class="form">
             <div class="form1">
                 <h2>Drop us a Line</h2>
-                <p>Don't be sh. Let us know if ou have an question!</p>
+                <p>Don't be shy. Let us know if you have any question!</p>
                 <button class="contact-us">Contact us</button>
             </div>
 
@@ -186,9 +186,9 @@
                 <h2>Our Newsletter</h2>
                 <p>Dialogue is an essencial part of an script</p>
                 <div class="input-form">
-                    <input type="text" name="firstName" id="firstName">
-                    <input type="text" name="lastName" id="lastName">
-                    <input type="email" name="email" id="email">
+                    <input type="text" name="firstName" id="firstName" placeholder="First Name">
+                    <input type="text" name="lastName" id="lastName" placeholder="Last Name">
+                    <input type="email" name="email" id="email" placeholder="Email">
                     <button class="btn-form">Contact us</button>
                 </div>
             </form>
